--- a/app/views/incidents/adopt.html.erb
+++ b/app/views/incidents/adopt.html.erb
@@ -13,26 +13,26 @@
 
   <h2 id="what">What is a Detailed Incident Report?</h2>
 
-  <p>The Detailed Incident Report reveals more of the Government&rsquo;s information about the incident such as the names of staff who were involved, a more detailed account of what happened, and which other incidents are related to this one. These reports are extremely useful for investigating the detention network and provide important information about a range of detention issues. For example, see <a href="http://s3.amazonaws.com/detention_logs/incidents/detailed_reports/000/050/330/original/1-3CTBC9.pdf?1370745305">Detailed Incident Report 1-3CTBC9</a> and compare to the <a href="http://detentionlogs.com.au/data/incidents/50330">summary incident report</a>.</p>
+  <p>A Detailed Incident Report contains more information about an incident. It can have multiple, more substancial accounts of what happened, list incidents related to this one, indicated whether minors were involved and more. These reports are extremely useful for investigating the detention network and provide important information about a range of detention issues. For example, see <a href="http://s3.amazonaws.com/detention_logs/incidents/detailed_reports/000/050/330/original/1-3CTBC9.pdf?1370745305">Detailed Incident Report 1-3CTBC9</a> and compare to the <%= link_to "summary incident report", incident_path(50330) %>.</p>
 
   <h2 id="why-do-it">Why make a request?</h2>
 
-  <p>This is a way for everybody to help increase transparency and accountability in Australian detention facilities. If this is an incident that you think warrants further investigation, if you think it raises more questions than it answers or if you simply want more details about it then this is how to get them. Adopting this incident is a great way you can contribute to the Detention Logs project.</p>
+  <p>This is a way for everybody to help increase transparency and accountability in Australian detention facilities. If this is an incident that you think warrants further investigation, if it raises more questions than answers or if you simply want more clarity as to what happened then this is how to get it. Adopting this incident is a great way you can contribute to the Detention Logs project.</p>
 
   <h2 id="what-to-expect">What should I expect?</h2>
 
-  <p>Lodging a freedom of information request is easy. There is no application fee so all you need to do is <a href="#" title="opens a prefilled Freedom of Information request using the Right To Know FOI tool">follow the &lsquo;Adopt Incident 1-2TB9HT&rsquo; link</a>. You&rsquo;ll find a pre-written request for the detailed report of the incident summary you were just exploring (<a href="/data/incidents/50639" title="Go back to the summary of Incident 1-2PK97X">Incident 1-2TB9HT</a>).</p>
+  <p>Lodging a freedom of information (FOI) request is easy. There is currently no application fee so all you need to do is follow the &lsquo;Adopt Incident 1-2TB9HT&rsquo; link at th top. You&rsquo;ll find a pre-written request for the detailed report for the incident you were just exploring (<%= link_to "Incident #{@incident.incident_number}", @incident, :title => "Go back to the summary of Incident #{@incident.incident_number}" %>).</p>
 
-  <p>The work of communicating back and forth with your FOI decision maker gets handled through the Right to Know website, a fantastic tool that makes it easy to use Australia&rsquo;s FOI system. At Right To Know requests are listed publicly which means that others can help you with your request if anything comes up, and once released, the documents you request go public straight away. We&rsquo;ll add those documents to the incident reports on our site so everyone can access this public information.</p>
+  <p>Your communication with the FOI Officer assigned to your request is handled through the <a href="https://www.righttoknow.org.au/">Right to Know website</a>, a fantastic tool by the <a href="https://www.openaustraliafoundation.org.au/">OpenAustralia Foundation</a> that makes it easy to use Australia&rsquo;s FOI system. At Right To Know requests are listed publicly which means that others can help you with your request if anything confusing comes up, and once released, the documents you request go public straight away. We&rsquo;ll add those documents to the incident reports on our site so everyone can access this public information.</p>
 
-  <p>Once the Department of Immigration and Citizenship has acknowledged your request, one of the first things they&rsquo;ll do is request an extension of time. We recommend you don&rsquo;t consent to this extension because the documents you&rsquo;ll be requesting aren&rsquo;t very long and it shouldn&rsquo;t take them much time to process.</p>
+  <p>Once the Department of Immigration and Citizenship has acknowledged your request, one of the first things they will do is request an extension of time. We recommend you do not consent to this extension because the documents you will be requesting are not long and it should not take them much time to process.</p>
 
-  <p>If you request too many incidents the Department may try to charge you or say that it&rsquo;s an unreasonable diversion of their resources and refuse to process it. We recommend that you limit the amount of incidents you request at any one time to between one and five to reduce any potential costs.</p>
+  <p>If you request many incident reports at once the Department may try to charge you or say that it is an unreasonable diversion of their resources and refuse to process it. We recommend that you limit the amount of incidents you request at any one time to between one and five to reduce any potential costs.</p>
 
   <h2>More information</h2>
 
   <ul>
-      <li><a href="http://www.oaic.gov.au/foi-portal/about_foi.html">Learn more about FOI</a></li>
-      <li><a href="https://www.righttoknow.org.au/">Check out the Right To Know project</a>.</li>
+    <li><a href="http://www.oaic.gov.au/foi-portal/about_foi.html">Learn more about Australia's Freedom of Information system</a></li>
+    <li><a href="https://www.righttoknow.org.au/">Check out the Right To Know project</a>.</li>
   </ul>
 </article>
