add Bryan and change heading capitalisation

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -47,17 +47,20 @@
   <dt>Editor</dt>
     <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a></dd>
 
-  <dt>Current Contributors</dt>
+  <dt>Current contributors</dt>
     <dd><a href="https://twitter.com/pipb25" title="Pip Brown on Twitter.">Pip Brown</a></dd>
 
   <dt>Founders</dt>
     <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a>, <a href="http://twitter.com/Lawrence_Bull" title="Lawrence Bull on Twitter">Lawrence Bull</a>, <a href="http://twitter.com/FarrellPF" title="Paul Farrell on Twitter">Paul Farrell</a></dd>
 
-  <dt>Data Processing</dt>
+  <dt>Data processing</dt>
     <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a>, <a href="https://twitter.com/pipb25" title="Pip Brown on Twitter.">Pip Brown</a>, <a href="http://twitter.com/Lawrence_Bull" title="Lawrence Bull on Twitter">Lawrence Bull</a>, <a href="http://twitter.com/FarrellPF" title="Paul Farrell on Twitter">Paul Farrell</a>, Vincent Farrell, and <a href="http://peterwilliamfrancis.tumblr.com/">Peter Francis</a></p></dd>
 
-  <dt>Website</dt>
+  <dt>Designer &amp; developer</dt>
     <dd><a href="http://equivalentideas.com" title="Luke Bacon's website.">Luke Bacon</a></p></dd>
+
+  <dt>Developer</dt>
+    <dd><a href="http://bryanmcleod.com.au/">Bryan McLeod</a></p></dd>
 </dl>
 
 <p>Thanks to <a href="http://wendybacon.com">Wendy Bacon</a>, <a href="http://bryanmcleod.com.au/">Bryan McLeod</a>, <a href="http://theglobalmail.org/">The Global Mail</a>, <a href="http://newmatilda.com/">New Matilda</a>, <a href="http://openaustralia.org">Open Australia</a>, <a href="http://investigate.org.au">The Australian Centre for Independent Journalism</a> and <a href="http://guardian.co.uk/australia">The Guardian Australia</a>.</p>
