added initial scale to the viewport tag

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
 
   <meta name="description" content="<%= yield(:description)%>">
 
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <%= stylesheet_link_tag "style.min.css", :media => "all" %>
 
