--- a/pattern-lab/_patterns/00-atoms/00-meta/_00-head.mustache
+++ b/pattern-lab/_patterns/00-atoms/00-meta/_00-head.mustache
@@ -2,8 +2,10 @@
 <html class="{{ htmlClass }}" lang="en">
 	<head>
 		<title>{{ title }}</title>
+
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width" />
+
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<link rel="stylesheet" href="/stylesheets/style.min.css?{{ cacheBuster }}" media="all" />
 
