--- a/app/assets/stylesheets/modules/_fonts.scss
+++ b/app/assets/stylesheets/modules/_fonts.scss
@@ -23,11 +23,12 @@
   src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'), url(http://themes.googleusercontent.com/static/fonts/opensans/v6/PRmiXeptR36kaC0GEAetxhbnBKKEOwRKgsHDreGcocg.woff) format('woff');
 }
 
-.wf-loading .site-header,
-.wf-loading .main,
-.wf-loading .site-footer {
-    visibility: hidden;
-}
+// .wf-loading .site-header,
+// .wf-loading .main,
+// .wf-loading .site-footer {
+//     visibility: hidden;
+// }
+
 .wf-active body {
     font-family: 'Open Sans', Verdana, sans-serif;
     text-rendering: optimizeLegibility;
