remove incorrect use of aria role banner

--- a/app/views/home/frontpage.html.erb
+++ b/app/views/home/frontpage.html.erb
@@ -6,7 +6,7 @@
 
 <article id="main" role="main">
   <section class="deep-body-container front-matter">
-      <h1 class="logo" role="banner">Detention Logs</h1>
+      <h1 class="logo">Detention Logs</h1>
 
       <p class="lede">We publish data, documents and investigations that reveal new perspectives on conditions and events inside Australia's immigration detention network. Detention Logs supports deeper community knowledge of and accountability for conditions in detention.</p>
 
