make the tag line the home page title

--- a/app/views/home/frontpage.html.erb
+++ b/app/views/home/frontpage.html.erb
@@ -1,5 +1,5 @@
 <%
-  title 'Home'
+  title "Inside Australian immigration detention"
 
   description "We publish data, documents and investigations that reveal new perspectives on conditions and events inside immigration detention."
 %>
