refer to normal margin on home page logo after bp-l

--- a/app/assets/stylesheets/objects/_home.scss
+++ b/app/assets/stylesheets/objects/_home.scss
@@ -14,7 +14,9 @@
   }
 
   .front-matter .logo {
-    @include rem(margin, ms(2), 0, 0);
+    @include breakpoint(max-width $bp-l) {
+      @include rem(margin, ms(2), 0, 0);
+    }
   }
 
   .lede,
