comment out unused js

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,9 @@
   <%= render 'layouts/site-footer' %>
 
-  <%= javascript_include_tag 'jquery.min', 'global.min' %>
+  <%# javascript_include_tag 'jquery.min', 'global.min' %>
 
   <% if admin_signed_in? %>
-      <%= javascript_include_tag 'jquery_ujs.min.js' %>
+      <%= javascript_include_tag 'jquery.min','jquery_ujs.min.js' %>
   <% end %>
 
 	</body>
