--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,6 +2,11 @@
 
   <%# javascript_include_tag 'jquery.min', 'global.min' %>
 
+  <!-- Include polyfills for < IE 9 -->
+    <!--[if lt IE 9]>
+        <%= javascript_include_tag 'pollyfill.min' %>
+  <![endif]-->
+
   <% if admin_signed_in? %>
       <%= javascript_include_tag 'jquery.min','jquery_ujs.min.js' %>
   <% end %>
