--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!--[if IE 8]> <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<html class="no-js" lang="en">
 <head>
   <meta charset="utf-8">
 
@@ -19,7 +18,6 @@
   <%= csrf_meta_tag %>
 
 </head>
-
 <body class="<%= "#{params[:id]} #{controller.controller_name} #{controller.controller_name}-#{controller.action_name}" %>">
   <% if notice %>
     <p class="msg msg-notice"><%= notice %></p>
