--- a/app/views/layouts/_secondary-nav.html.erb
+++ b/app/views/layouts/_secondary-nav.html.erb
@@ -2,5 +2,5 @@
     <li><%= link_to "Glossary", :glossary %></li>
     <li><%= link_to "Reporting Recipe", :investigations_recipe %></li>
     <li><%= link_to "Principles", :principles %></li>
-    <!-- <li><%= link_to "Copyright: CC BY", :copyright %></li> -->
+    <!-- <li><%# link_to "Copyright: CC BY", :copyright %></li> -->
 </ul>
