fix typos in recipe table of contents

--- a/app/views/pages/investigations_recipe.html.erb
+++ b/app/views/pages/investigations_recipe.html.erb
@@ -17,7 +17,7 @@
       <ol>
         <li><a href="#far-view">The far view</a></li>
 
-        <li><a href="#cear-view">The near view</a></li>
+        <li><a href="#near-view">The near view</a></li>
       </ol>
     </li>
 
@@ -27,7 +27,7 @@
 
     <li><a href="#foi">Beyond the incident reports: how can FOI requests be lodged effectively to the Immigration Department?</a></li>
 
-    <li><a href="looking-forward">Looking forward</a></li>
+    <li><a href="#looking-forward">Looking forward</a></li>
   </ol>
 </nav>
 
