--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,6 +7,17 @@
         <%= javascript_include_tag 'pollyfill.min' %>
   <![endif]-->
 
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-40270731-1', 'detentionlogs.com.au');
+    ga('send', 'pageview');
+
+  </script>
+
   <% if admin_signed_in? %>
       <%= javascript_include_tag 'jquery.min','jquery_ujs.min.js' %>
   <% end %>
