--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,8 +3,8 @@
   <%# javascript_include_tag 'jquery.min', 'global.min' %>
 
   <!-- Include polyfills for < IE 9 -->
-    <!--[if lt IE 9]>
-        <%= javascript_include_tag 'pollyfill.min' %>
+  <!--[if lt IE 9]>
+    <%= javascript_include_tag 'polyfill.min.js' %>
   <![endif]-->
 
   <script>
