fix typo, add .js extension to script tag

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -19,7 +19,7 @@
   </script>
 
   <% if admin_signed_in? %>
-      <%= javascript_include_tag 'jquery.min','jquery_ujs.min.js' %>
+      <%= javascript_include_tag 'jquery.min.js','jquery_ujs.min.js' %>
   <% end %>
 
 	</body>
