--- a/app/views/pages/investigations_recipe.html.erb
+++ b/app/views/pages/investigations_recipe.html.erb
@@ -1,7 +1,7 @@
 <%
   title "Reporting Recipe"
 
-  description ""
+  description "A guide to using the Detention Logs resource in reporting, research and investigation."
 %>
 
 <header class="article-header">
