remove edit link from about page
It's unlikely anyone wants to edit this page, the link is a little distracting

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,7 +3,7 @@
 
   description "About Detention Logs, a new independent project committed to transparency and accountability in Australia’s immigration detention network."
 
-  github_edit_url = "https://github.com/DetentionLogs/detentionlogs/blob/Development/app/views/pages/about.html.erb"
+  # github_edit_url = "https://github.com/DetentionLogs/detentionlogs/blob/Development/app/views/pages/about.html.erb"
 %>
 
 <header class="article-header">
