--- a/app/views/layouts/_logo.html.erb
+++ b/app/views/layouts/_logo.html.erb
@@ -1,4 +1,4 @@
-<a class="banner" href="<%= root_url %>" rel="home">
-    <span class="logo">Detention Logs</span>
+<a class="banner h-card" href="<%= root_url %>" rel="home">
+    <span class="logo p-name">Detention Logs</span>
     <p class="tagline">Inside Australia's immigration detention</p>
 </a>
