--- a/app/views/pages/glossary.html.erb
+++ b/app/views/pages/glossary.html.erb
@@ -148,7 +148,7 @@
 
   <dt id="Incident">Incident</dt>
   <dd>
-    <p>An “incident” in this context is an event in one of Australia’s immigration detention facilities which has been recorded by the facility’s staff. The private contractors that run the detention network, including companies <a href="/about/glossary/#serco">Serco</a>, <a href="/about/glossary/#IHMS">IHMS</a> and <a href="/about/glossary/#G4S">G4S</a>, are required to file incident reports to the <a href="/about/glossary/#DIAC">Australian Government Department of immigration and Citizenship (DIAC)</a>, where they are archived in a centralised database.</p>
+    <p>An “incident” in this context is an event in one of Australia’s immigration detention facilities which has been recorded by the facility’s staff. The private contractors that run the detention network, including companies <a href="glossary/#serco">Serco</a>, <a href="/glossary/#IHMS">IHMS</a> and <a href="/glossary/#G4S">G4S</a>, are required to file incident reports to the <a href="/glossary/#DIAC">Australian Government Department of immigration and Citizenship (DIAC)</a>, where they are archived in a centralised database.</p>
     <p>DIAC are ultimately responsible for the welfare of people held in the detention network. They use these incident reports as one way to understand and track occurrences and conditions in their facilities.</p>
 
     <p>The types of incidents described in the reports collected by Detention Logs include births, deaths, illnesses, accidents/injuries, self-harms, complaints, escapes, media presence, protests and more. <a href="/data/incidents">You can browse the reports with our Incident Explorer</a>.</p>
