--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -69,4 +69,4 @@
     <dd><a href="http://bryanmcleod.com.au/">Bryan McLeod</a></p></dd>
 </dl>
 
-<p>Thanks to <a href="http://wendybacon.com">Wendy Bacon</a>, <a href="http://bryanmcleod.com.au/">Bryan McLeod</a>, <a href="http://theglobalmail.org/">The Global Mail</a>, <a href="http://newmatilda.com/">New Matilda</a>, <a href="http://openaustralia.org">Open Australia</a>, <a href="http://investigate.org.au">The Australian Centre for Independent Journalism</a> and <a href="http://guardian.co.uk/australia">The Guardian Australia</a>.</p>
+<p>Thanks to <a href="http://wendybacon.com">Wendy Bacon</a>, <a href="http://bryanmcleod.com.au/">Bryan McLeod</a>, <a href="http://theglobalmail.org/">The Global Mail</a>, <a href="http://newmatilda.com/">New Matilda</a>, <a href="http://oaf.org.au">OpenAustralia Foundation</a>, <a href="http://investigate.org.au">The Australian Centre for Independent Journalism</a> and <a href="http://guardian.co.uk/australia">The Guardian Australia</a>.</p>
