--- a/app/views/home/frontpage.html.erb
+++ b/app/views/home/frontpage.html.erb
@@ -17,7 +17,7 @@
       </section>
 
       <section class="module">
-        <h2 class="module-heading"><%= link_to "investigations", :investigations %></h2>
+        <h2 class="module-heading"><%= link_to "Investigations", :investigations %></h2>
 
         <p class="module-body">The information on this website is used in reporting on and research into detention.</p>
       </section>
@@ -35,7 +35,7 @@
     </blockquote>
 
     <figcaption class="feature-object">
-      <cite>Extract from a “letter of concern” by 15 doctors working at Christmas&nbsp;Island Detention&nbsp;Centre, Novermber&nbsp;2013 <a href="http://www.theguardian.com/world/2013/dec/19/revealed-doctors-outrage-over-unsafe-refugee-patients">reported by Guardian&nbsp;Australia</a></cite>
+      <cite>Extract from a “letter of concern” by 15 doctors working at Christmas&nbsp;Island Detention&nbsp;Centre, November&nbsp;2013 <a href="http://www.theguardian.com/world/2013/dec/19/revealed-doctors-outrage-over-unsafe-refugee-patients">reported by Guardian&nbsp;Australia</a></cite>
     </figcaption>
   </figure>
 </article>
