add a default secondary column class

--- a/app/assets/stylesheets/partials/_layout.scss
+++ b/app/assets/stylesheets/partials/_layout.scss
@@ -144,6 +144,14 @@ body {
   }
 }
 
+.secondary {
+  @extend %default-secondary-column;
+
+  @include breakpoint($bp-l) {
+    float: right;
+  }
+}
+
 .page-header {
   @include clearfix;
 }
