remove margin-top from h3:first-child, to pre-empt exceptions

--- a/app/assets/stylesheets/partials/_typebase.scss
+++ b/app/assets/stylesheets/partials/_typebase.scss
@@ -59,6 +59,10 @@ h3 {
   font-style: bold;
   text-transform: uppercase;
   letter-spacing: .125em;
+
+  &:first-child {
+    margin-top: 0;
+  }
 }
 
 h4 {
