--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -23,6 +23,7 @@
 @import "partials/abbreviations";
 @import "partials/lists";
 @import "partials/logo";
+@import "partials/modules";
 @import "partials/links";
 @import "partials/buttons";
 @import "partials/tooltip";
