remove redundant markup

--- a/app/views/pages/principles.html.erb
+++ b/app/views/pages/principles.html.erb
@@ -45,17 +45,15 @@
 Across our editorial, design and publishing practices, we judge the success of our choices against how our work is used to support more informed policy discussion and
 challenge inhumane policy based on spin. We provide information to be engaged with and pulled apart, rather than just accepted passively, by our users.</p>
 
-<section class="references discrete">
-  <h3>References</h3>
+<h3>References</h3>
 
-  <ul>
-    <li>“Publish for people, not too them” is a quote from <a href="http://aworkinglibrary.com/" title="Mandy Brown's website, A working library">Mandy Brown</a>’s article <cite><a href="http://contentsmagazine.com/articles/babies-and-the-bathwater/" title="Babies and the Bathwater in Contents Magazine.">Babies and the Bathwater</a></cite> on contemporary publishing.</li>
+<ul>
+  <li>“Publish for people, not too them” is a quote from <a href="http://aworkinglibrary.com/" title="Mandy Brown's website, A working library">Mandy Brown</a>’s article <cite><a href="http://contentsmagazine.com/articles/babies-and-the-bathwater/" title="Babies and the Bathwater in Contents Magazine.">Babies and the Bathwater</a></cite> on contemporary publishing.</li>
 
-    <li><a href="http://isbn.nu/9780143114949" title="Here Comes Everybody on Wikipedia">Here Comes Everybody, Clay Shirky, 2006</a></li>
+  <li><a href="http://isbn.nu/9780143114949" title="Here Comes Everybody on Wikipedia">Here Comes Everybody, Clay Shirky, 2006</a></li>
 
-    <li><cite><a href="http://jonathanstray.com/what-should-the-digital-public-sphere-do">What Should The Digital Public Sphere Do?</a>, Jonathan Stray, 2011</cite></li>
-  </ul>
-</section>
+  <li><cite><a href="http://jonathanstray.com/what-should-the-digital-public-sphere-do">What Should The Digital Public Sphere Do?</a>, Jonathan Stray, 2011</cite></li>
+</ul>
 
 <h2 id="were-all-in-this-together">We’re all in this together</h2>
 
@@ -68,14 +66,13 @@ Wikileaks, ProPublica, Heather Brooke, Clay Shirky, OpenAustralia Foundation, Ed
 extremely generous support when we’ve asked and would love to return the favour to anyone looking to learn more or user our information.</p>
 
 
-<section class="references discrete">
-  <h3>References</h3>
-  <ul>
-    <li><a href="http://towcenter.org/research/post-industrial-journalism/">Post Industrial Journalism Review: Preparing for the Present, C.W. Anderson, Emily Bell and Clay Shirky
-    Tow Center for Digital Journalism, Columbia Journalism School, Nov. 27, 2012</a></li>
-    <li><a href="https://www.youtube.com/watch?v=YdVCl4iD6CA">Keynote at Back To The Source, ACIJ Conference 2011, Robert Rosenthal youtube</a></li>
-  </ul>
-</section>
+<h3>References</h3>
+
+<ul>
+  <li><a href="http://towcenter.org/research/post-industrial-journalism/">Post Industrial Journalism Review: Preparing for the Present, C.W. Anderson, Emily Bell and Clay Shirky
+  Tow Center for Digital Journalism, Columbia Journalism School, Nov. 27, 2012</a></li>
+  <li><a href="https://www.youtube.com/watch?v=YdVCl4iD6CA">Keynote at Back To The Source, ACIJ Conference 2011, Robert Rosenthal youtube</a></li>
+</ul>
 
 <h2 id="think-long-term">Think long-term</h2>
 
@@ -109,14 +106,12 @@ statements. With anonymity can come deniability—official spokespersons should 
 is an expectation that anything a spokesperson says is on the record, unless explicitly stated otherwise. Public servants wield considerable power in our society
 and should be transparent in the ways they engage with journalists and the public.</p>
 
-
-
 <h2 id="we-look-up-to">Guides we look to:</h2>
 
 <ul>
-<li><a href="http://www.alliance.org.au/code-of-ethics.html">Media Alliance Code of Ethics</a>.</li>
-<li><a href="http://www.economist.com/styleguide/introduction">Economist Style Guide</a></li>
-<li><a href="http://www.theguardian.com/info/guardian-editorial-code">The Guardian Editorial Code</a></li>
-<li><a href="http://craigmod.com/journal/subcompact_publishing/#sub_manifesto">Subcompact Publishing Manifesto</a></li>
+  <li><a href="https://github.com/equivalentideas/independent-archive-principles/blob/master/independent-archive-principles.md">Principles for Independent Archives</a>.</li>
+  <li><a href="http://www.alliance.org.au/code-of-ethics.html">Media Alliance Code of Ethics</a>.</li>
+  <li><a href="http://www.economist.com/styleguide/introduction">Economist Style Guide</a></li>
+  <li><a href="http://www.theguardian.com/info/guardian-editorial-code">The Guardian Editorial Code</a></li>
+  <li><a href="http://craigmod.com/journal/subcompact_publishing/#sub_manifesto">Subcompact Publishing Manifesto</a></li>
 </ul>
-</article>
