--- a/app/views/incidents/index.html.erb
+++ b/app/views/incidents/index.html.erb
@@ -12,7 +12,7 @@
 	<a class="skip-link" href="#results">Skip to filter results</a>
 
 	<header class="page-header">
-		<h1 class="page-title">Incident Explorer</h1>
+		<h1 class="page-title">Incident Reports</h1>
 
     <p>Incident Reports are records of events that occur in immigration detention, produced by detention centre staff for the Australian Government. <%= link_to "About Incident Reports.", about_incidents_path, class: 'lede-sub-link', title: 'Read more information about Incident Reports and where this data came from.' %></p>
 	</header>
