--- a/app/views/incidents/about.html.erb
+++ b/app/views/incidents/about.html.erb
@@ -28,7 +28,7 @@
       <dd><%= Incident.order('occured_on').first.occured_on.strftime("%e %b %Y") %> &ndash; <%= Incident.order('occured_on').last.occured_on.strftime("%e %b %Y") %></dd>
 
     <dt>Current available Locations</dt>
-      <dd>All onshore detention facilities (includes those on Christmas Island) open during the period. Note that Nauru and Manus Island facilities were not operating between early 2008 and late 2012</dd>
+      <dd>All onshore detention facilities open during the period (includes those on Christmas Island). Note that Nauru and Manus Island facilities were not operating between early 2008 and late 2012 and would be considered &ldquo;offshore&rdquo;</dd>
   </dl>
 </aside>
 
