--- a/app/views/incidents/about.html.erb
+++ b/app/views/incidents/about.html.erb
@@ -18,7 +18,7 @@
 
 <p class="lede">Incident Reports are records of events that occur in immigration detention, recorded by detention centre staff for the Australian Government.</p>
 
-<aside class="box secondary">
+<aside class="box msg-notice secondary">
   <h3>Published by Detention&nbsp;Logs</h3>
 
   <dl>
