--- a/app/views/incidents/about.html.erb
+++ b/app/views/incidents/about.html.erb
@@ -23,9 +23,9 @@
 
   <dl>
     <dt>Incident Reports available</dt>
-      <dd><%= @incidents.count %></dd>
+      <dd><%= @total_incidents %></dd>
     <dt>Current available period</dt>
-      <dd><%= Incident.order('occured_on').first.occured_on.strftime("%e %b %Y") %> &ndash; <%= Incident.order('occured_on').last.occured_on.strftime("%e %b %Y") %></dd>
+      <dd><%= @start_date %> &ndash; <%= @end_date %></dd>
 
     <dt>Current available Locations</dt>
       <dd>All onshore detention facilities open during the period (includes those on Christmas Island). Note that Nauru and Manus Island facilities were not operating between early 2008 and late 2012 and would be considered &ldquo;offshore&rdquo; in Australian Government documents.</dd>
